--- a/frontend/common/index.html
+++ b/frontend/common/index.html
@@ -46,9 +46,9 @@
 </head>
 <body>
     <div class="nav_bar">
-        <a href="school_admin\school_admin.html">Admin</a>
-        <a href="teacher\teacher.html">Teacher</a>
-        <a href="student\student.html">Student</a>
+        <a href="admin_login.html">Admin</a>
+        <a href="teacher_login.html">Teacher</a>
+        <a href="student_login.html">Student</a>
     </div>
     <div class="details">
         <div class="image">
